# Permit_-overview

./: .env.example  Dockerfile  README.md  docker-compose.yaml  next.config.ts  package-lock.json  package.json
agent-service/: .dockerignore  Dockerfile  pyproject.toml
agent-service/config/: workflow.yaml
agent-service/prompts/: classifier_system.txt  reasoner_system.txt  synthesizer_system.txt
agent-service/src/: main.py  pipeline.py
agent-service/src/agents/: classifier.py  reasoner.py  synthesizer.py
agent-service/src/models/: types.py
agent-service/src/streaming/: sse_emitter.py
agent-service/src/tools/: check_location.py  classify_business.py  determine_triggers.py  identify_emissions.py  precompute.py  rest_client.py  school_proximity.py  sic_lookup.py  waterway_check.py
agent-service/src/utils/: json_parser.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AddressInput.tsx  AgencyBadge.tsx  AgentTrace.tsx  ClassificationBanner.tsx  DocumentUpload.tsx  GuidedQuestions.tsx  PermitCard.tsx  PermitForm.tsx  PermitResults.tsx  ReportView.tsx  TimelineView.tsx
src/lib/: demo-cache.ts  nim-client.ts  regulations.ts  types.ts
src/lib/agents/: classifier.ts  model-router.ts  permit-reasoner.ts  report-writer.ts  synthesizer.ts
src/lib/data/: la-county-geography.json  sic-codes.json  ventura-county-geography.json
src/lib/tools/: ceqa-exemption-check.ts  check-location.ts  city-permit-check.ts  classify-business.ts  determine-triggers.ts  fire-review-check.ts  identify-emissions.ts  precompute.ts  school-proximity.ts  sic-lookup.ts  (+3 more)
(+28 files in other folders)
